crates/goat_isolated_declarations/tests/snapshots/arrow-function-return-type.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/arrow-function-return-type.ts
---
```
==================== .D.TS ====================

declare function A(): unknown;
declare const B: unknown;
declare const C: unknown;
declare const D: () => string;
declare const E: () => (() => void) | undefined;


==================== Errors ====================

  x TS9007: Function must have an explicit return type annotation with
  | --isolatedDeclarations.
   ,-[2:10]
 1 | function A() {
 2 |   return () => {
   :          ^^^^^^^
 3 |     return C;
   `----

  x TS9007: Function must have an explicit return type annotation with
  | --isolatedDeclarations.
   ,-[7:11]
 6 | 
 7 | const B = () => { return B };
   :           ^^^^^^^
 8 | 
   `----

  x TS9007: Function must have an explicit return type annotation with
  | --isolatedDeclarations.
    ,-[9:20]
  8 | 
  9 | const C = function () {}
    :                    ^
 10 | 
    `----


```
