crates/goat_isolated_declarations/tests/snapshots/class-decorator.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/class-decorator.ts
---
```
==================== .D.TS ====================

export declare class Test1 {
	/**
	* This method will trigger the feature highlight dialog load/show based on dialogId and analyticsId
	*/
	property: (() => any) | undefined;
}
export declare class Test2 {
	/**
	* This method will trigger the feature highlight dialog load/show based on dialogId and analyticsI
	*/
	property: ((arg: any) => any) | undefined;
}
export declare class Test3 {
	property?: {
		property?: (arg: any) => any;
	};
}
