crates/goat_isolated_declarations/tests/snapshots/declare-global.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/declare-global.ts
---
```
==================== .D.TS ====================

declare function MyFunction(): string;
declare global {
	interface Window {
		MyFunction: typeof MyFunction;
	}
}
export {};
