crates/goat_isolated_declarations/tests/snapshots/eliminate-imports.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/eliminate-imports.ts
---
```
==================== .D.TS ====================

import { AExtend, BExtend, Type, CImplements1, CImplements2, CType, ThisType1, ThisType2, ThisType3, fn } from "mod";
export interface A extends AExtend<Type> {}
export declare class B extends BExtend<Type> {}
export declare class C implements CImplements1<CType>, CImplements2<CType> {}
export declare class D {
	method(this: ThisType1): void;
}
export declare function foo(this: ThisType2): void;
export declare const bar: (this: ThisType3) => void;
import { type InferType1, type InferType2 } from "infer";
export type F<X extends InferType1> = X extends infer U extends InferType2 ? U : never;
export interface VitestUtils {
	fn: typeof fn;
	isMockFunction: (fn: any) => fn is any;
}
export { Unused } from "./unused";
