crates/goat_isolated_declarations/tests/snapshots/empty-export.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/empty-export.ts
---
```
==================== .D.TS ====================

type A = string;
export declare function a(): A;
export declare const ShallowReactiveMarker: unique symbol;
export type ShallowReactive<T> = T & {
	[ShallowReactiveMarker]?: true;
};
export {};
