crates/goat_isolated_declarations/tests/snapshots/export-declare-declarations.snap
---
source: crates/goat_isolated_declarations/tests/mod.rs
input_file: crates/goat_isolated_declarations/tests/fixtures/export-declare-declarations.ts
---
```
==================== .D.TS ====================

import { Reference } from "mod";
declare class Class {}
declare function Function(): Reference;
declare const variable: number;
declare enum Enum {
	A = 0,
	B = 1,
	C = 2
}
export { Class, Function, variable, Enum };
